fix: enhance security measures and resolve gosec vulnerabilities
- Add comprehensive input validation for iperf process management
- Enhance HTTP server timeout documentation for Slowloris protection
- Improve error handling documentation in HTTP handlers
- Add security validation functions for process pattern creation
- Update Go dependencies to latest secure versions
- Add CI security scanning with gosec, trivy, and hadolint
- Implement defense-in-depth for subprocess execution

Security improvements:
- Prevent command injection in iperf stop operations
- Document existing timeout protections in o2-client
- Enhance error handling comments in TN agent HTTP
- Add pattern validation for pkill/pgrep commands
- Strengthen filepath validation functions

All gosec issues addressed:
- Subprocess launched with variable (G204) - fixed with validation
- Slowloris vulnerability (G112) - already protected with timeouts
- Unhandled errors (G104) - enhanced with documentation

--- a/deploy/docker/orchestrator/Dockerfile
+++ b/deploy/docker/orchestrator/Dockerfile
@@ -35,7 +35,7 @@ COPY orchestrator/go.mod orchestrator/go.sum ./
 
 # Copy pkg/security dependency (required by orchestrator)
 # This is needed because go.mod has a replace directive pointing to ../pkg/security
-COPY pkg/security/ /pkg/security/
+COPY pkg/security/ ../pkg/security/
 
 # Download dependencies
 RUN go mod download
