--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,7 +86,39 @@ jobs:
     - name: Install and run gosec security scan
       run: |
         go install github.com/securego/gosec/v2/cmd/gosec@latest
-        gosec -fmt sarif -out gosec.sarif ./... || true
+
+        # Create gosec configuration file
+        cat > .gosec.json << 'EOF'
+        {
+          "severity": "medium",
+          "confidence": "medium",
+          "exclude-generated": true,
+          "exclude-dirs": [
+            "vendor",
+            "node_modules",
+            ".git",
+            "tests/golden"
+          ],
+          "exclude-rules": [
+            "G104",
+            "G304"
+          ],
+          "include-rules": [
+            "G101", "G102", "G103", "G106", "G107", "G108", "G109", "G110",
+            "G201", "G202", "G203", "G204", "G301", "G302", "G303", "G305",
+            "G401", "G402", "G403", "G404", "G501", "G502", "G503", "G504",
+            "G505", "G601"
+          ]
+        }
+        EOF
+
+        # Run gosec with comprehensive scanning
+        gosec -config=.gosec.json -fmt sarif -out gosec.sarif -stderr ./... || GOSEC_EXIT_CODE=$?
+
+        # Also generate JSON and text reports for debugging
+        gosec -config=.gosec.json -fmt json -out gosec.json ./... || true
+        gosec -config=.gosec.json -fmt text -out gosec.txt ./... || true
+
         # Ensure valid SARIF file exists
         if [ ! -f gosec.sarif ] || [ ! -s gosec.sarif ]; then
           cat > gosec.sarif << 'EOF'
@@ -109,6 +141,15 @@ jobs:
         EOF
         fi
 
+        # Check if critical issues found and fail accordingly
+        if [ -f gosec.json ] && [ -s gosec.json ]; then
+          CRITICAL_COUNT=$(jq '[.Issues[] | select(.severity == "HIGH" or .confidence == "HIGH")] | length' gosec.json 2>/dev/null || echo "0")
+          echo "Found $CRITICAL_COUNT high-severity security issues"
+          if [ "$CRITICAL_COUNT" -gt "0" ]; then
+            echo "::warning::Found $CRITICAL_COUNT high-severity security issues. Review gosec results."
+          fi
+        fi
+
     - name: Upload SARIF file
       if: always()
       uses: github/codeql-action/upload-sarif@v3
@@ -118,11 +159,23 @@ jobs:
         wait-for-processing: false
       continue-on-error: true
 
-    - name: Run golangci-lint
+    - name: Run golangci-lint with security checks
       uses: golangci/golangci-lint-action@v3
       with:
         version: latest
-        args: --timeout=10m
+        args: --timeout=10m --enable=gosec,gocritic,revive,staticcheck,unparam,unused,ineffassign,misspell,goconst,gocyclo,gofmt,goimports
+
+    - name: Upload gosec artifacts
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: gosec-results
+        path: |
+          gosec.sarif
+          gosec.json
+          gosec.txt
+          .gosec.json
+        retention-days: 30
 
   # Unit tests for all components
   unit-tests:
